--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
   </head>
   <body>
     <h1>Hello gitHub!</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta, delectus.</p>
   </body>
 </html>
