--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/style.css" />
   </head>
   <body>
     <h1>Hello gitHub!</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta, delectus.</p>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta, delectus.
+    </p>
+    <img src="images/autumn.jpg" alt="Autumn images" />
   </body>
 </html>
